Simplify sbt configuration for sbt >= 0.13.14